[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68" ]

[project]
name = "hellbox-glyph-construction"
version = "0.1.0"
description = "GlyphConstruction job for hellbox."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Jack Jennings", email = "jack@standard-library.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "hellbox",
  "ufolib2",
]
urls.Homepage = "https://github.com/hellboxpy/hellbox-glyph-construction"

[dependency-groups]
dev = [
  "mdformat",
  "pyproject-fmt>=2.21.2",
  "pytest",
  "ruff>=0,<1",
  "ty>=0.0.34",
]

[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.namespaces = true
packages.find.exclude = [ "hellbox", "hellbox.jobs" ]

[tool.uv]
sources.hellbox = { git = "https://github.com/hellboxpy/hellbox.git" }

[tool.ruff]
exclude = [ "vendor" ]

[tool.ty]
overrides = [
  { include = [ "vendor/**", "src/hellbox/jobs/glyph_construction/_vendor/**" ] },
  { include = [ "tests/**" ] }
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
unresolved-reference = "ignore"

[tool.ty.overrides.rules]
unresolved-import = "ignore"
